--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Al-Amin Obhi Web debeloper</title>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<section>
+    <div class="haif-width">
+        <h1>Welcome to</h1>
+        <h1><span class="name-highlight">My test</span> website</h1>
+        <h3>world-class plofessonal web debeloper</h3>
+        <p>Explore our structured learning paths to discover everything you need to know about building for the modern web.
+     Performance </p> 
+    </div>
+    <div class="haif-width">
+        <img src="images/profile.png" alt="">
+    </div>
+</section>
+   
 </body>
 </html>
