--- a/index.html
+++ b/index.html
@@ -9,18 +9,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section>
+<section class="top-banner">
     <div class="haif-width">
         <h1>Welcome to</h1>
-        <h1><span class="name-highlight">My test</span> website</h1>
+        <h1><span class="red-highlight">My test</span> website</h1>
         <h3>world-class plofessonal web debeloper</h3>
         <p>Explore our structured learning paths to discover everything you need to know about building for the modern web.
      Performance </p> 
+     <a class="link-button" target="_blank" href="https://www.linkedin.com/in/al-amin-obhi-982248203/">my profile</a>
     </div>
     <div class="haif-width">
         <img src="images/profile.png" alt="">
     </div>
 </section>
-   
+<h6>good life</h6>
+<section class="dream-area">
+    <div class="haif-width">
+<img src="images/my-png.png" alt="">
+        </div>
+<div class="haif-width">
+<h2>Big Dream</h2>
+<h3>I am coming</h3>
+<p>ami boro akjon web developer hote chai<br />amake web developer hote jankar mahabub bhai amake help korteche ami onek khushi</p>
+<a class="link-button" target="_blank" href="https://web.facebook.com/pram.h.j">my facebook page</a>
+</div>
+</section>
+  <section class="experience-area">
+      <h2>Experiences</h2>
+     <div class="haif-width">
+<h2>Full stack web Debeloper</h2>
+<h3><span class="red-highlight">2021-present // pro level web Dev</span> </h3>
+<p>ami onek chesta kore akhane aste perechi<br />tai onek kom takay web site toiri kore dite chai.<br />tomra chaile kaj koriay nite paro</p>
+     </div>
+     <div class="haif-width">
+<h2>baby web Debeloper</h2>
+<h3><span class="red-highlight">2020-2022 // programing-hero learner</span></h3>
+<p>ami programing-hero web debeloper janker mahabub bhai ar kach theke programing shikheci<br /> tobe tomre chaile akhan theke shikhte paro</p>
+     </div> 
+  </section> 
 </body>
 </html>
