--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Al-Amin Obhi Web debeloper</title>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
@@ -36,16 +36,21 @@
 </section>
   <section class="experience-area">
       <h2>Experiences</h2>
-     <div class="haif-width">
+     <div id="full-stack" class="haif-width single-experience">
 <h2>Full stack web Debeloper</h2>
-<h3><span class="red-highlight">2021-present // pro level web Dev</span> </h3>
+<h3  class="red-highlight">2021-present // pro level web Dev </h3>
 <p>ami onek chesta kore akhane aste perechi<br />tai onek kom takay web site toiri kore dite chai.<br />tomra chaile kaj koriay nite paro</p>
      </div>
-     <div class="haif-width">
+     <div id="baby" class="haif-width single-experience">
 <h2>baby web Debeloper</h2>
-<h3><span class="red-highlight">2020-2022 // programing-hero learner</span></h3>
+<h3 class="red-highlight">2020-2022 // programing-hero learner</h3>
 <p>ami programing-hero web debeloper janker mahabub bhai ar kach theke programing shikheci<br /> tobe tomre chaile akhan theke shikhte paro</p>
      </div> 
   </section> 
+  <footer>
+      <p>
+     copyright text 2021|| programing-hero (Obhi)     
+    </p>
+  </footer>
 </body>
 </html>
