--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Al-Amin Obhi Web debeloper</title>
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,7 +20,7 @@
         <img src="images/profile.png" alt="">
     </div>
 </section>
-<h6>good life</h6>
+<h4>good website</h4>
 <section class="dream-area">
     <div class="haif-width">
 <img src="images/my-png.png" alt="">
